[package]
version = "0.1.0"
edition = "2021"
name = "array2ds"
authors = ["Yotam <yotamm52@gmail.com>"]
description = "Simple Package for handling sized 2d arrays in rust, without the usage of the keyword unsafe cuz why not"
repository = "https://github.com/yotam5/array2ds"
license-file = "LICENSE"
keywords = ["gamedev","arrays","2d array","2d","grid"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"

